--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "billboard.js": "^1.6.1",
+    "d3.js": "0.0.2-security",
     "react": "^16.4.2",
+    "react-billboardjs": "^1.4.3",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-tui-chart": "^1.0.0",
+    "recharts": "^1.1.0",
+    "tui-chart": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
