git hosting complete

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://wjdgusdn1223.github.io/StudyWithBigdata",
   "name": "study-with-bigdata",
   "version": "0.1.0",
   "private": true,
@@ -21,5 +22,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
