--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "billboard.js": "^1.6.1",
     "d3.js": "0.0.2-security",
